Fix `Slider` navigation on mobile

--- a/src/components/elements/Slider/styles.scss
+++ b/src/components/elements/Slider/styles.scss
@@ -13,12 +13,6 @@
         transition: border 1000ms ease-in-out, opacity 1000ms ease-in-out, filter 1000ms ease-in-out,
           box-shadow 1000ms ease-in-out;
 
-        @media (max-width: 1024px) {
-          &:last-of-type {
-            display: none;
-          }
-        }
-
         figure {
           width: 100%;
           height: 100%;
